RESOLVED FIXED137386
REGRESSION (r173265): UIWebView PDF loading is completely broken
https://bugs.webkit.org/show_bug.cgi?id=137386
Summary REGRESSION (r173265): UIWebView PDF loading is completely broken
Tim Horton
Reported 2014-10-03 01:52:46 PDT
The WebPDFViewPlaceholder changes in r173265 completely broke loading by ... removing the code that completes the load. Let's put it back. rdar://problem/18524717
Attachments
patch (2.46 KB, patch)
2014-10-03 01:53 PDT, Tim Horton
ddkilzer: review+
Tim Horton
Comment 1 2014-10-03 01:53:50 PDT
Tim Horton
Comment 2 2014-10-03 01:54:43 PDT
Comment on attachment 239192 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=239192&action=review > Source/WebKit/ios/WebView/WebPDFViewPlaceholder.mm:287 > + // Dump the data provider as soon as possible since the CGPDFDocument will not hold onto it. I'm not sure this comment makes sense to me (I'm just restoring it, but maybe we should refrain).
Tim Horton
Comment 3 2014-10-03 01:56:55 PDT
Comment on attachment 239192 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=239192&action=review > Source/WebKit/ios/WebView/WebPDFViewPlaceholder.mm:285 > + _document = CGPDFDocumentCreateWithProvider(provider); No idea why this is manually memory-managed like this, but we should fix that in a different patch.
David Kilzer (:ddkilzer)
Comment 4 2014-10-03 08:55:43 PDT
Comment on attachment 239192 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=239192&action=review r=me >> Source/WebKit/ios/WebView/WebPDFViewPlaceholder.mm:287 >> + // Dump the data provider as soon as possible since the CGPDFDocument will not hold onto it. > > I'm not sure this comment makes sense to me (I'm just restoring it, but maybe we should refrain). Yes, let's remove the comment. It doesn't appear to add anything useful.
Tim Horton
Comment 5 2014-10-03 13:27:17 PDT
Note You need to log in before you can comment on or make changes to this bug.