REGRESSION (r173265): UIWebView PDF loading is completely broken https://bugs.webkit.org/show_bug.cgi?id=137386 <rdar://problem/18524717>

Reviewed by David Kilzer.

* WebView/WebPDFViewPlaceholder.h:
* WebView/WebPDFViewPlaceholder.mm:
(-[WebPDFViewPlaceholder layout]):
(-[WebPDFViewPlaceholder finishedLoadingWithDataSource:]):
Restore important code that creates the CGDataProvider and sets _didFinishLoad
and calls _doPostLoadOrUnlockTasks after finishing a load, which was haphazardly
removed in the aforementioned revision.


Canonical link: https://commits.webkit.org/155198@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@174282 268f45cc-cd09-0410-ab3c-d52691b4dbfc